@@ -1,5 +1,6 @@
 v0.4.1 (Development revision)
 - [robweber] Fix for profiles shared via path substitution
+- Integration with plugin.program.video.node.editor
 - Change how submenuVisibility property is generated
 - Skin and script default shortcuts now loaded from defaultID property
 - Ability to set background and widget defaults based on defaultID
